# template

./: .clang-format  CMakeLists.txt  README.md  init.bat
runSolution/: CMakeLists.txt  main.cpp
solution/: CMakeLists.txt
solution/include/: solution.h
solution/src/: solution.cpp
testSolution/: CMakeLists.txt  tests.cpp
